fixed the appearance of right white space

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,5 @@
 html {
   scroll-behavior: smooth;
-  padding: 0;
-  margin: 0;
-  width: 100%;
 }
 
 body {
